# techno_c_cpp

./: .gitignore  CMakeLists.txt  README.md  many_nums.txt  numbers.txt
.github/workflows/: blank.yml
include/: parallel_sort.h  utils.h
project/: main.c
project/include/: naive_sort.h  parallel_sort.h  utils.h
project/naive_include/: array.h  naive_sort.h
project/naive_src/: array.c  naive_sort.c
project/parallel_include/: parallel_sort.h
project/parallel_src/: parallel_sort.c
project/src/: main.c  naive_sort.c  parallel_sort.c  utils.c
project/utils/: utils.c  utils.h
src/: CMakeLists.txt  main.c  naive_sort.c  parallel_sort.c  utils.c
tests/: CMakeLists.txt  naive_test.cpp
